:bug: fix: reconstrução do método que verifica a instalação do Python para resolver bugs.